3_debugging/1_part_1/5_catch_unclosed_parentheses,_brackets,_braces_and_quotes/output_5.txt
SyntaxError: unknown: Unexpected token, expected "," (1:22)

> 1 | let myArray = [1, 2, 3;
    |                       ^
  2 | let arraySum = myArray.reduce((previous, current =>  previous + current);
  3 | console.log(`Sum of array values is: ${arraySum}`);
  4 | 